# devint-experiment

./: LICENSE  README.md  pyproject.toml
analysis/: analyze_full_attribution.py  generate_full_data_attribution.py  generate_parameter_outlier_series.py  generate_paren_attribution.py
devint_experiment/: constants.py  data.py  main.py  model.py  train.py  train_llm.py  train_log.py
